infrastructure/network/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: infrastructure
  namespace: cilium-system
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${cluster_domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - name: infrastructure-tls
      allowedRoutes:
        namespaces:
          from: All
